--- a/index.html
+++ b/index.html
@@ -725,6 +725,456 @@ Tamanho da tela = Distância do projetor ÷ Throw Ratio
     Se quiser, posso criar uma versão em PDF ou montar uma lista de computadores prontos para compra.
   </p>
 </section>
+<section id="artigo-5" class="py-20 bg-orange-50 px-6 text-left">
+  <h2 class="text-3xl font-bold text-orange-700 mb-6">
+    ✔️ Checklist completo: tudo que você precisa para montar a projeção da igreja do zero
+  </h2>
+
+  <p class="text-gray-700 mb-6">
+    Se a sua igreja está começando agora no ministério de projeção, ou se você deseja melhorar o que 
+    já existe, este checklist completo vai te ajudar a montar toda a estrutura de forma correta, prática 
+    e profissional. Com ele, você saberá exatamente quais equipamentos comprar, como instalar e o que 
+    configurar para garantir uma projeção clara, estável e eficiente.
+  </p>
+
+  <hr class="border-orange-300 my-8">
+
+  <!-- SEÇÃO 1 -->
+  <h3 class="text-2xl font-semibold text-orange-600 mt-8 mb-4">1. 🎥 Projetor ideal para o tamanho da igreja</h3>
+  <p class="text-gray-700 mb-4">
+    O coração da projeção é o projetor. Escolher o modelo errado gera imagem fraca, serrilhada ou 
+    desaparecendo durante o dia.  
+  </p>
+
+  <p class="text-gray-700 mb-4">
+    <strong>Checklist do projetor:</strong><br>
+    • Brilho adequado (3.000 a 6.000 lumens ou mais)<br>
+    • Resolução nativa HD ou Full HD<br>
+    • Tecnologia: 3LCD ou Laser recomendados<br>
+    • Throw Ratio compatível com a distância da sua igreja<br>
+    • Saída de vídeo HDMI<br>
+    • Boa reputação da marca
+  </p>
+
+  <hr class="my-8 border-gray-300">
+
+  <!-- SEÇÃO 2 -->
+  <h3 class="text-2xl font-semibold text-orange-600 mt-8 mb-4">2. 🖥️ Computador preparado para projeção</h3>
+  <p class="text-gray-700 mb-4">
+    Mesmo com um bom projetor, um computador fraco pode travar e arruinar o culto.  
+  </p>
+
+  <p class="text-gray-700 mb-4">
+    <strong>Checklist do computador:</strong><br>
+    • Processador: Intel i3/i5 ou Ryzen 3/5<br>
+    • 8 GB de RAM (mínimo) ou 16 GB (ideal)<br>
+    • SSD de 240 GB ou mais<br>
+    • HDMI nativo<br>
+    • Windows otimizado (modo desempenho, sem notificações)<br>
+    • Drivers atualizados<br>
+  </p>
+
+  <hr class="my-8 border-gray-300">
+
+  <!-- SEÇÃO 3 -->
+  <h3 class="text-2xl font-semibold text-orange-600 mt-8 mb-4">3. 🧵 Cabos e conexões corretas</h3>
+  <p class="text-gray-700 mb-4">
+    Cabos ruins são os maiores responsáveis por falhas na projeção.  
+  </p>
+
+  <p class="text-gray-700 mb-4">
+    <strong>Checklist de cabos:</strong><br>
+    • HDMI 2.0 de boa qualidade<br>
+    • Extensor HDMI via cabo de rede CAT6 (para distâncias acima de 10 m)<br>
+    • HDMI de fibra ótica (distâncias acima de 20 m)<br>
+    • Evitar adaptadores VGA → HDMI<br>
+    • Cabo de energia do projetor confiável e bem fixado
+  </p>
+
+  <hr class="my-8 border-gray-300">
+
+  <!-- SEÇÃO 4 -->
+  <h3 class="text-2xl font-semibold text-orange-600 mt-8 mb-4">4. 🖼️ Tela de projeção adequada</h3>
+  <p class="text-gray-700 mb-4">
+    Muita gente projeta direto na parede, mas isso reduz brilho, nitidez e contraste.
+  </p>
+
+  <p class="text-gray-700 mb-4">
+    <strong>Checklist da tela:</strong><br>
+    • Tamanho adequado para a igreja (80" a 150")<br>
+    • Tela tensionada ou retrátil de boa qualidade<br>
+    • Ganho entre 1.0 e 1.2 (equilíbrio perfeito)<br>
+    • Instalação nivelada e sem ondulações<br>
+    • Posição centralizada com o projetor
+  </p>
+
+  <hr class="my-8 border-gray-300">
+
+  <!-- SEÇÃO 5 -->
+  <h3 class="text-2xl font-semibold text-orange-600 mt-8 mb-4">5. 💡 Instalação correta do projetor</h3>
+  <p class="text-gray-700 mb-4">
+    Uma boa instalação faz mais diferença do que muita gente imagina.
+  </p>
+
+  <p class="text-gray-700 mb-4">
+    <strong>Checklist da instalação:</strong><br>
+    • Projetor alinhado ao centro da tela<br>
+    • Distância correta conforme o manual<br>
+    • Suporte firme e seguro<br>
+    • Cabos organizados e protegidos<br>
+    • Ajustes finos apenas quando necessários (keystone mínimo)
+  </p>
+
+  <hr class="my-8 border-gray-300">
+
+  <!-- SEÇÃO 6 -->
+  <h3 class="text-2xl font-semibold text-orange-600 mt-8 mb-4">6. 🎤 Programas essenciais para projeção</h3>
+  <p class="text-gray-700 mb-4">
+    Escolha os softwares confiáveis e bem configurados para evitar travamentos.
+  </p>
+
+  <p class="text-gray-700 mb-4">
+    <strong>Checklist de software:</strong><br>
+    • Holyrics (recomendado)<br>
+    • PowerPoint / Google Slides<br>
+    • Player confiável para vídeos<br>
+    • Plugins e temas organizados<br>
+    • Atualização apenas fora do horário de culto
+  </p>
+
+  <hr class="my-8 border-orange-300">
+
+  <!-- CONCLUSÃO -->
+  <h3 class="text-2xl font-bold text-orange-700 mt-8 mb-6">Conclusão</h3>
+  <p class="text-gray-700">
+    Com esse checklist completo, sua igreja terá todos os equipamentos, cabos e configurações essenciais 
+    para montar uma projeção profissional do zero. Seguindo cada etapa, você evitará travamentos, imagem fraca 
+    e problemas comuns — garantindo uma apresentação visual excelente para todo o culto.
+     </p>
+</section>
+<section id="artigo-6" class="py-20 bg-orange-50 px-6 text-left">
+  <h2 class="text-3xl font-bold text-orange-700 mb-6">
+    📱 Como conectar o celular ao Holyrics (Guia completo e atualizado)
+  </h2>
+
+  <p class="text-gray-700 mb-6">
+    O Holyrics possui uma função extremamente útil chamada <strong>Controle Remoto</strong>, que permite 
+    controlar a projeção diretamente do celular. Isso é ideal para equipes pequenas, pregadores, dirigentes, 
+    equipes de mídia e até músicos que precisam trocar letras sem correr até o computador.
+    Neste artigo, você vai aprender como conectar o celular ao Holyrics de forma simples e segura.
+  </p>
+
+  <hr class="border-orange-300 my-8">
+
+  <!-- REQUISITOS -->
+  <h3 class="text-2xl font-semibold text-orange-600 mt-8 mb-4">1. ✔️ Requisitos para conectar o celular ao Holyrics</h3>
+
+  <p class="text-gray-700 mb-4">
+    Antes de tentar conectar, confira se todos os itens abaixo estão corretos:
+  </p>
+
+  <ul class="list-disc pl-6 text-gray-700 mb-4">
+    <li>O celular e o computador devem estar na <strong>mesma rede Wi-Fi</strong></li>
+    <li>O Holyrics deve estar <strong>aberto</strong> no computador</li>
+    <li>A função de servidor do Holyrics precisa estar <strong>ativada</strong></li>
+    <li>A rede Wi-Fi não pode ter bloqueio entre dispositivos (isolamento AP)</li>
+  </ul>
+
+  <p class="text-gray-700">
+    Se todos esses itens estão OK, pode seguir para o próximo passo.
+  </p>
+
+  <hr class="my-8 border-gray-300">
+
+  <!-- ATIVAR SERVIDOR -->
+  <h3 class="text-2xl font-semibold text-orange-600 mt-8 mb-4">2. 🌐 Ativando o controle remoto dentro do Holyrics</h3>
+
+  <p class="text-gray-700 mb-4">
+    No Holyrics, o controle remoto funciona através de um servidor interno que gera um 
+    <strong>endereço de acesso</strong> para o celular entrar.
+  </p>
+
+  <p class="text-gray-700 mb-4">
+    <strong>Passos para ativar:</strong><br>
+    1. Abra o Holyrics no computador<br>
+    2. Vá em <strong>Menu de Ferramentas </strong><br>
+    3. Clique em <strong>Plugin Holyrics </strong><br>
+    4. Ative a opção <strong>Habilitar servidor</strong><br>
+    5. Anote o endereço que aparece (ex: <em>192.168.0.10:8080</em>)
+  </p>
+
+  <p class="text-gray-700">
+    É esse endereço que você vai digitar no navegador do celular.
+  </p>
+
+  <hr class="my-8 border-gray-300">
+
+  <!-- CELULAR -->
+  <h3 class="text-2xl font-semibold text-orange-600 mt-8 mb-4">3. 📱 Conectando o celular ao Holyrics</h3>
+
+  <p class="text-gray-700 mb-4">
+    Com o servidor ativado no Holyrics, siga os passos abaixo pelo celular:
+  </p>
+
+  <ul class="list-disc pl-6 text-gray-700 mb-4">
+    <li>Conecte o celular na mesma rede Wi-Fi do PC</li>
+    <li>Abra o navegador do celular (Chrome, Safari, etc.)</li>
+    <li>Digite o endereço mostrado no Holyrics (ex: 192.168.0.10:8080)</li>
+    <li>A interface do controle remoto será carregada</li>
+  </ul>
+
+  <p class="text-gray-700">
+    Depois disso, você já pode controlar:<br>
+    • Letras<br>
+    • Versículos<br>
+    • Pastas<br>
+    • Slides<br>
+    • Temas e vídeos<br>
+    • Modo blackout<br>
+    • Modo de pré-visualização
+  </p>
+
+  <hr class="my-8 border-gray-300">
+<hr class="my-8 border-gray-300">
+
+<h3 class="text-2xl font-semibold text-orange-600 mt-8 mb-4">
+  3.1 📲 Conectando o celular ao Holyrics usando QR Code
+</h3>
+
+<p class="text-gray-700 mb-4">
+  O Holyrics também permite conectar o celular ao controle remoto através de um 
+  <strong>QR Code</strong>, tornando o processo ainda mais rápido e fácil — especialmente útil para
+  visitantes, músicos ou pregadores que precisam acessar o sistema rapidamente.
+</p>
+
+<p class="text-gray-700 mb-4">
+  Para gerar o QR Code, siga estes passos:
+</p>
+
+<ul class="list-disc pl-6 text-gray-700 mb-4">
+  <li>Abra o Holyrics no computador</li>
+  <li>Vá em <strong>Configurações</strong></li>
+  <li>Clique em <strong>Gerenciar acesso sem utilizar Senha(App do celular )</strong></li>
+  <li>Clique em <strong>Mostrar QR Code</strong> ou <strong>Gerar QR Code</strong></li>
+</ul>
+
+<p class="text-gray-700 mb-4">
+  Ao fazer isso, o Holyrics exibirá um QR Code com o endereço do servidor remoto.  
+  Agora, no celular:
+</p>
+
+<ul class="list-disc pl-6 text-gray-700 mb-4">
+  <li>Abra a câmera do celular ou um aplicativo leitor de QR Code</li>
+  <li>Aponte para o QR Code exibido no computador</li>
+  <li>O celuar se conectarar automaticamente com o computador. Estando na mesma rede wi-fi.</li>
+</ul>
+
+<p class="text-gray-700">
+  Esse método é ideal para:
+  <br>• músicos que precisam trocar letras rapidamente  
+  <br>• dirigentes de culto  
+  <br>• pregadores convidados  
+  <br>• membros da mídia iniciantes  
+  <br><br>
+  Já que evita digitar o endereço IP manualmente, reduz erros e agiliza o processo.
+</p>
+
+  <!-- PROBLEMAS COMUNS -->
+  <h3 class="text-2xl font-semibold text-orange-600 mt-8 mb-4">4. ⚠️ Problemas comuns e como resolver</h3>
+
+  <p class="text-gray-700 mb-4">
+    Se o celular não conecta, confira as falhas mais comuns:
+  </p>
+
+  <ul class="list-disc pl-6 text-gray-700 mb-4">
+    <li><strong>O celular não está na mesma rede Wi-Fi</strong></li>
+    <li><strong>O Holyrics não está com o servidor habilitado</strong></li>
+    <li><strong>O antivírus está bloqueando a porta do servidor</strong></li>
+    <li><strong>O roteador está com isolamento de cliente ativado</strong></li>
+    <li><strong>A porta usada pelo Holyrics está ocupada por outro software</strong></li>
+  </ul>
+
+  <p class="text-gray-700 mb-4">
+    <strong>Dicas para resolver:</strong><br>
+    • Reinicie o Holyrics<br>
+    • Troque a porta do servidor (ex: 8080 → 9090)<br>
+    • Teste outro navegador no celular<br>
+    • Reinicie o roteador da igreja
+  </p>
+
+  <hr class="my-8 border-gray-300">
+
+  <!-- RESTRICOES -->
+  <h3 class="text-2xl font-semibold text-orange-600 mt-8 mb-4">5. 🔒 Segurança e permissões do controle remoto</h3>
+
+  <p class="text-gray-700 mb-4">
+    O Holyrics permite configurar permissões para evitar que qualquer pessoa da igreja tenha acesso 
+    ao controle remoto.
+  </p>
+
+  <ul class="list-disc pl-6 text-gray-700 mb-4">
+    <li>Ativar senha de acesso</li>
+    <li>Permitir apenas controle parcial (ex: trocar músicas)</li>
+    <li>Bloquear temas e vídeos</li>
+    <li>Restringir o uso ao Wi-Fi interno da igreja</li>
+  </ul>
+
+  <p class="text-gray-700">
+    Recomendamos usar senha sempre que o controle remoto for usado por várias pessoas.
+  </p>
+
+  <hr class="border-orange-300 my-8">
+
+  <h3 class="text-2xl font-bold text-orange-700 mt-8 mb-6">Conclusão</h3>
+  <p class="text-gray-700">
+    O controle remoto do Holyrics facilita muito o trabalho da equipe de mídia, tornando o culto mais 
+    dinâmico e organizado. Basta ativar o servidor no computador e acessar o endereço pelo celular. 
+    Com isso, qualquer pessoa devidamente autorizada pode controlar a projeção com rapidez e segurança.
+  </p>
+</section>
+<section id="artigo-7" class="py-20 bg-orange-50 px-6 text-left">
+  <h2 class="text-3xl font-bold text-orange-700 mb-6">
+    📘 Como usar o PowerPoint integrado ao Holyrics (Guia Completo)
+  </h2>
+
+  <p class="text-gray-700 mb-6">
+    O Holyrics possui integração completa com o PowerPoint, permitindo apresentar slides, pregações,
+    ministrações e estudos bíblicos diretamente pelo Holyrics sem precisar alternar janelas.
+    Neste artigo, você aprenderá como usar PowerPoint dentro do Holyrics de forma simples,
+    organizada e totalmente profissional.
+  </p>
+
+  <hr class="border-orange-300 my-8">
+
+  <!-- SEÇÃO 1 -->
+  <h3 class="text-2xl font-semibold text-orange-600 mt-8 mb-4">
+    1. ✔️ Como importar apresentações PowerPoint no Holyrics
+  </h3>
+
+  <p class="text-gray-700 mb-4">
+    O Holyrics permite que você abra arquivos <strong>.ppt</strong> ou <strong>.pptx</strong> diretamente no programa,
+    sem precisar abrir o PowerPoint manualmente.
+  </p>
+
+  <p class="text-gray-700 mb-4"><strong>Passo a passo:</strong></p>
+
+  <ul class="list-disc pl-6 text-gray-700 mb-4">
+    <li>Abra o Holyrics</li>
+    <li>Vá até <strong>Biblioteca → Arquivos</strong></li>
+    <li>Clique em <strong>Adicionar arquivo</strong></li>
+    <li>Selecione sua apresentação PowerPoint</li>
+    <li>Aguarde o Holyrics carregar os slides</li>
+  </ul>
+
+  <p class="text-gray-700">
+    Após carregado, cada slide aparece como uma imagem, permitindo controle total.
+  </p>
+
+  <hr class="my-8 border-gray-300">
+
+  <!-- SEÇÃO 2 -->
+  <h3 class="text-2xl font-semibold text-orange-600 mt-8 mb-4">
+    2. 🖥️ Controlando o PowerPoint pelo Holyrics
+  </h3>
+
+  <p class="text-gray-700 mb-4">
+    Depois de importar a apresentação, você pode controlar tudo pelo Holyrics:
+  </p>
+
+  <ul class="list-disc pl-6 text-gray-700 mb-4">
+    <li>Avançar slide</li>
+    <li>Voltar slide</li>
+    <li>Exibir slide específico</li>
+    <li>Ocultar a tela (blackout)</li>
+    <li>Pré-visualizar o slide antes de projetar</li>
+  </ul>
+
+  <p class="text-gray-700">
+    Isso evita depender do PowerPoint aberto e impede erros durante o culto.
+  </p>
+
+  <hr class="my-8 border-gray-300">
+
+  <!-- SEÇÃO 3 -->
+  <h3 class="text-2xl font-semibold text-orange-600 mt-8 mb-4">
+    3. 🛠️ Configurações recomendadas do PowerPoint para usar no Holyrics
+  </h3>
+
+  <p class="text-gray-700 mb-4">
+    Para garantir que o Holyrics carregue a apresentação com qualidade e fluidez, configure o arquivo PPT assim:
+  </p>
+
+  <ul class="list-disc pl-6 text-gray-700 mb-4">
+    <li>Tamanho do slide em <strong>16:9</strong> (formato da maioria dos projetores)</li>
+    <li>Use fontes grandes e legíveis (mínimo 48px)</li>
+    <li>Evite animações muito complexas</li>
+    <li>Evite vídeos muito pesados embutidos</li>
+    <li>Use imagens em boa resolução</li>
+  </ul>
+
+  <p class="text-gray-700">
+    O Holyrics converte cada slide em imagem, então animações e transições não são exibidas — e isso é ótimo,
+    pois reduz travamentos.
+  </p>
+
+  <hr class="my-8 border-gray-300">
+
+  <!-- SEÇÃO 4 -->
+  <h3 class="text-2xl font-semibold text-orange-600 mt-8 mb-4">
+    4. 📂 Como organizar apresentações no Holyrics
+  </h3>
+
+  <p class="text-gray-700 mb-4">
+    Para evitar confusão durante o culto, organize suas apresentações por categorias.
+  </p>
+
+  <p class="text-gray-700 mb-4"><strong>Exemplos:</strong></p>
+
+  <ul class="list-disc pl-6 text-gray-700 mb-4">
+    <li>Pregações</li>
+    <li>Estudos Bíblicos</li>
+    <li>Conferências</li>
+    <li>Discipulado</li>
+    <li>Eventos especiais</li>
+  </ul>
+
+  <p class="text-gray-700">
+    Assim você encontra os arquivos rapidamente e evita erros.
+  </p>
+
+  <hr class="my-8 border-gray-300">
+
+  <!-- SEÇÃO 5 -->
+  <h3 class="text-2xl font-semibold text-orange-600 mt-8 mb-4">
+    5. 🚫 Problemas comuns e como resolver
+  </h3>
+
+  <p class="text-gray-700 mb-4">
+    Alguns problemas podem acontecer ao usar PowerPoint no Holyrics.
+  </p>
+
+  <ul class="list-disc pl-6 text-gray-700 mb-4">
+    <li>Slides cortados → ajuste para 16:9</li>
+    <li>Texto pequeno → aumente para no mínimo 48px</li>
+    <li>Fundo escuro demais → melhore o contraste</li>
+    <li>Slide não aparece → reinicie o Holyrics e importe novamente</li>
+    <li>Arquivo muito pesado → divida em partes</li>
+  </ul>
+
+  <p class="text-gray-700">
+    90% dos problemas são causados por tamanho do slide ou fontes muito pequenas.
+  </p>
+
+  <hr class="border-orange-300 my-8">
+
+  <!-- CONCLUSÃO -->
+  <h3 class="text-2xl font-bold text-orange-700 mt-8 mb-6">Conclusão</h3>
+  <p class="text-gray-700">
+    Integrar o PowerPoint ao Holyrics é uma das formas mais eficientes de apresentar estudos, pregações
+    e eventos especiais. A integração é simples, direta e permite controlar tudo sem abrir o PowerPoint.
+    Com isso, sua equipe ganha agilidade, segurança e profissionalismo no culto.
+  </p>
+</section>
 
   <!-- Download -->
   <section id="download" class="py-20 bg-white px-6 text-center">
